2000-01-27  Christopher James Lahey  <clahey@helixcode.com>

	* widgets/e-reflow.h, widgets/e-reflow.c: Added an arrow cursor
	for the draggable columns.  Made the clickable column area
	larger.  

	* widgets/e-text.h, widgets/e-text.c: Added an I beam cursor for
	the text item when it is editable.

	* widgets/e-minicard-label.c: Forward enter and leave
	notifications to the contained editable text item.

2000-01-26  Matt Loper  <matt.loper@splashtech.com>

	* camel/camel-formatter.c: By looking up a mimetype in a
	hashtable, we can now get a handler function for an arbitrary
	mimetype.

2000-01-26  bertrand  <bertrand@helixcode.com>

	* widgets/shortcut-bar/e-icon-bar.c (e_icon_bar_recalc_item_positions): 
	don't set the x_set and y_set 
	arguments as don't exist in gdk-pixbuf 
	anymore. 

2000-01-25  Mathieu Lacage <mathieu@advogato.org>

	* .cvsignore s: cvs shutup. 

2000-01-25  Christopher James Lahey  <clahey@helixcode.com>

	* widgets/e-reflow.c, widgets/e-minicard.c: Handle shift-tab
	properly now.

	* widgets/e-minicard-label.c: Reindented some areas.

	* widgets/test-reflow.c: Use e-canvas.  Set the back pixmap to
	NULL for the canvas so that scrolling won't flash grey.

	* widgets/e-canvas.c, widgets/e-canvas.h: These subclass
	GnomeCanvas to work around a few bugs so that evolution will work
	well with old versions of gnome-libs.

	* widgets/Makefile.am: Added e-canvas.c and e-canvas.h.

	* addressbook/contact-editor/contact-editor.glade: Not much
	change.  Mostly internal reorganization by glade itself.

2000-01-25  Christopher James Lahey  <clahey@helixcode.com>

	* addressbook/printing/smallbook.ecps: Example contact printing
	style.  Not used yet.

	* addressbook/printing/e-contact-print.glade: A glade file for
	editing contact printing styles.  Not used yet.

	* addressbook/printing/test-print.c: Test file for printing.

	* addressbook/printing/e-contact-print.c,
	addressbook/printing/e-contact-print.h,